--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 	],
 	"require": {
 		"php": "^7.0",
-		"monolog/monolog": "^2.0.*"
+		"monolog/monolog": "^1.12|^2.0"
 	},
 	"require-dev": {
 		"ext-curl": "*"
