--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
 		}
 	],
 	"require": {
-		"php": "^7.0|^8.0",
-		"monolog/monolog": "^1.23|^2.0"
+		"php": ">=8.0",
+		"monolog/monolog": "^2.0|^3.0"
 	},
 	"require-dev": {
 		"ext-curl": "*"
