--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 	],
 	"require": {
 		"php": "^7.0|^8.0",
-		"monolog/monolog": "^1.23|^2.0"
+		"monolog/monolog": "^1.23|^2.0|^3.0"
 	},
 	"require-dev": {
 		"ext-curl": "*"
