--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
 		}
 	],
 	"require": {
-		"php": "^7.0|^8.0|^8.1",
-		"monolog/monolog": "^3.0"
+		"php": ">=7.0",
+		"monolog/monolog": "^1.23|^2.0|^3.0"
 	},
 	"require-dev": {
 		"ext-curl": "*"
